--- a/frontend/src/blocks/About.css
+++ b/frontend/src/blocks/About.css
@@ -51,3 +51,14 @@
   margin: 0px;
   padding: 0px;
 }
+
+@media screen and (max-width: 680px) {
+  .about {
+    flex-direction: column;
+    gap: 25px;
+  }
+
+  .about__img {
+    margin-top: 125px;
+  }
+}
