--- a/frontend/src/blocks/Article.css
+++ b/frontend/src/blocks/Article.css
@@ -1,3 +1,7 @@
+.article {
+  height: 100vh;
+}
+
 .article__results {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -10,7 +14,6 @@
 
 .article__news-grid {
   max-width: 100%;
-  height: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-template-rows: auto;
@@ -54,4 +57,20 @@
   background-color: #fff;
   color: #000;
   border: 2px solid #000;
+}
+
+@media screen and (max-width: 850px) {
+  .article__results {
+    font-size: 16px;
+    margin: 40px auto 25px;
+  }
+
+  .article__news-grid {
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    margin: 0px auto;
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 540px) {
 }
