--- a/frontend/src/blocks/Bookmarked.css
+++ b/frontend/src/blocks/Bookmarked.css
@@ -21,9 +21,19 @@
   padding: 0px;
 }
 
+.bookmarked__results {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  letter-spacing: 2.5px;
+  color: #fff;
+  margin: 80px auto 50px;
+}
+
 .bookmarked__grid {
   max-width: 100%;
-  height: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-template-rows: auto;
@@ -35,13 +45,19 @@
   border-radius: 25px;
 }
 
-.bookmarked__results {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center;
-  letter-spacing: 2.5px;
-  color: #fff;
-  margin: 80px auto 50px;
+@media screen and (max-width: 850px) {
+  .bookmarked__title {
+    font-size: 16px;
+  }
+
+  .bookmarked__results {
+    font-size: 16px;
+    margin: 40px auto 25px;
+  }
+
+  .bookmarked__grid {
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    margin: 0px auto;
+    padding: 5px;
+  }
 }
