--- a/frontend/src/blocks/Footer.css
+++ b/frontend/src/blocks/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -6,7 +7,7 @@
   width: 100vw;
   background-color: #0e1a32;
   color: #fff;
-  margin: 0px;
+  margin: 50px 0px 0px;
   padding: 0px;
 }
 
