--- a/frontend/src/blocks/Home.css
+++ b/frontend/src/blocks/Home.css
@@ -49,7 +49,6 @@
 }
 
 .home__background-band {
-  /* refactor */
   display: none;
   position: absolute;
   top: 300px;
@@ -80,5 +79,35 @@
   }
   to {
     background-position: 100%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .home__image {
+    width: 275px;
+    height: 75px;
+    margin: 100px auto 0px;
+  }
+
+  .home__search-bar {
+    width: 400px;
+    height: 75px;
+    margin: 0px auto;
+    font-size: 35px;
+    padding: 15px 20px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .home__image {
+    width: 145px;
+    height: 35px;
+  }
+
+  .home__search-bar {
+    width: 190px;
+    height: 40px;
+    font-size: 16px;
+    padding: 8px 13px;
   }
 }
