--- a/frontend/src/blocks/Nav.css
+++ b/frontend/src/blocks/Nav.css
@@ -14,10 +14,46 @@
   z-index: 2;
 }
 
+.nav__logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0px auto;
+  padding: 0px;
+  gap: 10px;
+}
+
 .nav__img {
   width: 40px;
   height: 40px;
   margin: 0px auto;
+}
+
+.nav__title {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 16px;
+  text-align: left;
+  color: #fff;
+  width: 100%;
+  max-width: 55px;
+  margin: 10px 0px 0px 0px;
+  padding: 0px;
+}
+
+.nav__burger-button {
+  display: none;
+  width: 50px;
+  height: 50px;
+  background: url("../assets/menuIconDark.svg") center transparent;
+  background-size: contain;
+  border: none;
+  transition: background-image 0.3s ease;
+}
+
+.nav__burger-button:hover {
+  cursor: pointer;
+  background-image: url("../assets/menuIconLight.svg");
 }
 
 .nav__container {
@@ -28,27 +64,14 @@
   padding: 0px;
   gap: 1px;
   list-style: none;
+  visibility: visible;
+  opacity: 1;
+  position: static;
 }
 
-.nav__logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  margin: 0px auto;
-  padding: 0px;
-  gap: 10px;
-}
-
-.nav__title {
-  font-family: "Courier New", Courier, monospace;
-  font-size: 16px;
-  text-align: left;
-  color: #fff;
-  width: 30px;
-  margin: 10px 0px 0px 0px;
-  padding: 0px;
+.nav__container_visible {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .nav__img {
@@ -106,4 +129,88 @@
   background-color: #fff;
   color: #000;
   border: 2px solid #000;
+}
+
+@media screen and (max-width: 850px) {
+  .nav__logo {
+    gap: 5px;
+  }
+  .nav__img {
+    width: 60px;
+    height: 55px;
+  }
+
+  .nav__title {
+    font-size: 13px;
+  }
+
+  .nav__item-button {
+    font-size: 13px;
+    width: 100px;
+  }
+
+  .nav__sign-button {
+    width: 100px;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav {
+    display: flex;
+  }
+
+  .nav__burger-button {
+    display: flex;
+    margin: 0px auto;
+    position: absolute;
+    top: 15px;
+    right: 28px;
+  }
+
+  .nav__container {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 80px;
+    right: 28px;
+    flex-direction: column;
+    z-index: 2;
+    width: 50px;
+    transition: opacity 0.1s, visibility 0s ease;
+  }
+
+  .nav__container_visible {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .nav__img {
+    width: 60px;
+    height: 55px;
+  }
+
+  .nav__title {
+    font-size: 13px;
+  }
+
+  .nav__item-button {
+    font-size: 13px;
+    width: 100px;
+    height: 50px;
+    border: 3.75px solid #0e1a32;
+  }
+
+  .nav__sign-button {
+    width: 100px;
+    font-size: 12px;
+    margin: 0px 80px 0px 0px;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .nav__container {
+    visibility: visible;
+    opacity: 1;
+  }
 }
