--- a/frontend/src/blocks/ArticleItem.css
+++ b/frontend/src/blocks/ArticleItem.css
@@ -42,6 +42,19 @@
   opacity: 1;
 }
 
+.article-item__warn {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 10px;
+  text-align: right;
+  color: #ff3c3c;
+  width: 200px;
+  margin: 0px;
+  padding: 0px;
+}
+
 .article-item__image {
   width: 100%;
   max-width: 400px;
