--- a/frontend/src/blocks/Home.css
+++ b/frontend/src/blocks/Home.css
@@ -6,6 +6,17 @@
   justify-content: center;
   align-items: center;
   margin: 0px;
+  padding: 0px;
+}
+
+.home__section {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
   padding: 25px;
   background: linear-gradient(rgba(14, 26, 50, 0.25), rgba(14, 35, 50, 0.25)),
     url("../assets/chicagoPhoto.jpg") center no-repeat transparent;
