--- a/frontend/src/blocks/ArticleItem.css
+++ b/frontend/src/blocks/ArticleItem.css
@@ -112,10 +112,14 @@
   }
 
   .article-item__bookmark {
-    width: 20px;
+    bottom: 10px;
+    right: 10px;
+    width: 30px;
     height: 50px;
   }
-
+  .article-item__warn {
+    bottom: -3px;
+  }
   .article-item__image {
     height: 120px;
   }
