--- a/src/blocks/ArticleItem.css
+++ b/src/blocks/ArticleItem.css
@@ -117,9 +117,11 @@
     width: 30px;
     height: 50px;
   }
+
   .article-item__warn {
     bottom: -3px;
   }
+
   .article-item__image {
     height: 120px;
   }
@@ -140,5 +142,16 @@
 
   .article-item__subtext {
     font-size: 8.75px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .article-item {
+    width: 400px;
+    height: 350px;
+  }
+
+  .article-item__image {
+    height: 200px;
   }
 }
