--- a/src/blocks/Bookmarked.css
+++ b/src/blocks/Bookmarked.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
   color: #fff;
 }
 
@@ -33,16 +32,26 @@
 }
 
 .bookmarked__grid {
-  max-width: 100%;
+  width: 100%;
+  max-width: 1250px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-template-rows: auto;
+  justify-items: center;
+  align-items: center;
+  align-content: start;
   list-style: none;
   gap: 0px;
   margin: 0px auto 25px;
   padding: 15px;
   gap: 5px;
   border-radius: 25px;
+}
+
+@media screen and (max-width: 1240px) {
+  .bookmarked__grid {
+    max-width: 840px;
+  }
 }
 
 @media screen and (max-width: 850px) {
@@ -56,8 +65,15 @@
   }
 
   .bookmarked__grid {
+    max-width: 690px;
     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     margin: 0px auto;
     padding: 5px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .bookmarked__grid {
+    max-width: 455px;
   }
 }
