--- a/src/blocks/Bookmarked.css
+++ b/src/blocks/Bookmarked.css
@@ -1,10 +1,10 @@
 .bookmarked {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  color: #fff;
+  min-height: 100vh;
 }
 
 .bookmarked__title {
@@ -28,6 +28,7 @@
   text-align: center;
   letter-spacing: 2.5px;
   color: #fff;
+  height: 100px;
   margin: 80px auto 50px;
 }
 
