--- a/src/blocks/Footer.css
+++ b/src/blocks/Footer.css
@@ -5,10 +5,21 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  background-color: #0e1a32;
+  background-color: #0e2332;
   color: #fff;
-  margin: 50px 0px 0px;
+  margin: 0px;
   padding: 0px;
+}
+
+.footer__container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 100px auto 0px;
+  padding: 0px;
+  background-color: #0e1a32;
 }
 
 .footer__band {
