--- a/src/blocks/Bookmarked.css
+++ b/src/blocks/Bookmarked.css
@@ -2,9 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  min-height: 100vh;
 }
 
 .bookmarked__title {
@@ -16,6 +15,7 @@
   letter-spacing: 2.5px;
   color: #fff;
   width: 100%;
+  height: 100px;
   margin: 160px auto 50px;
   padding: 0px;
 }
